tests/outref/TERR025.ref

-- TERR025 : OCTO345 : Issue error for type mismatch between expression and function return type

-- No negative integers
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (-1) GLOBAL "^delimnames(keys(""id""))";

-- No values greater than UTF-8 max code point value (i.e. MAX_UTF8_VALUE = 1112064)
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (1112065) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (111206500) GLOBAL "^delimnames(keys(""id""))";

-- OCTO867 : Test ERR_TYPE_MISMATCH error syntax highlights function calls
select firstname = abs(id) from names;

-- OCTO867 : Test ERR_TYPE_MISMATCH error syntax highlights parenless function calls
select id = current_user from names;

LINE 3:1: ...ARCHAR(1), age INTEGER) DELIM (-1) GLOBAL "^delimnames(keys(""i...
                                            ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_INVALID_KEYWORD_CHAR: Integer value 1112065 given for delimiter character is not a valid ASCII (0-127) character
LINE 5:1: ...HAR(1), age INTEGER) DELIM (1112065) GLOBAL "^delimnames(keys("...
                                         ^^^^^^^
[ERROR]: ERR_INVALID_KEYWORD_CHAR: Integer value 111206500 given for delimiter character is not a valid ASCII (0-127) character
LINE 6:1: ...AR(1), age INTEGER) DELIM (111206500) GLOBAL "^delimnames(keys(...
                                        ^^^^^^^^^
[ERROR]: ERR_TYPE_MISMATCH: Type mismatch: left VARCHAR, right INTEGER
LINE 8:1: select firstname = abs(id) from names;
                 ^^^^^^^^^
LINE 8:1: select firstname = abs(id) from names;
                             ^^^^^^^
[ERROR]: ERR_TYPE_MISMATCH: Type mismatch: left INTEGER, right VARCHAR
LINE 10:1: select id = current_user from names;
                  ^^
LINE 10:1: select id = current_user from names;
                       ^^^^^^^^^^^^
